Fixed sport round 2

--- a/notebooks/exploring.ipynb
+++ b/notebooks/exploring.ipynb
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +99,8 @@
      "output_type": "stream",
      "text": [
       "['Jessica', 153.5, '55kg', '20y/o', 'soccer']\n",
-      "['Jessica', 153.5, '55kg', '20y/o', 'soccer']\n"
+      "['Jessica', 153.5, '55kg', '20y/o', 'soccer']\n",
+      "['Jessica', 153.5, '55kg', '20y/o', 'BJJ']\n"
      ]
     }
    ],
@@ -110,7 +111,12 @@
     "\n",
     "sport = \"BJJ\"\n",
     "\n",
-    "print(about_me)\n"
+    "print(about_me)\n",
+    "\n",
+    "about_me[-1] = sport\n",
+    "\n",
+    "print(about_me)  #WOOOOOOOOO\n",
+    "\n"
    ]
   }
  ],
