--- a/notebooks/exploring.ipynb
+++ b/notebooks/exploring.ipynb
@@ -91,22 +91,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Jessica', 153.5, '55kg', '20y/o', 'soccer']\n",
-      "['Jessica', 153.5, '55kg', '20y/o', 'soccer']\n",
-      "['Jessica', 153.5, '55kg', '20y/o', 'BJJ']\n"
+      "['Jessica', '153.5cm', '55kg', '20y/o', 'soccer']\n",
+      "['Jessica', '153.5cm', '55kg', '20y/o', 'soccer']\n",
+      "['Jessica', '153.5cm', '55kg', '20y/o', 'BJJ']\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['153.5cm', '55kg']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "#variable\n",
-    "about_me = [\"Jessica\", 153.5, str(55) + \"kg\", str(20) + \"y/o\", \"soccer\"]\n",
+    "about_me = [\"Jessica\", str(153.5) + \"cm\", str(55) + \"kg\", str(20) + \"y/o\", \"soccer\"]\n",
     "print(about_me)\n",
     "\n",
     "sport = \"BJJ\"\n",
@@ -116,6 +126,10 @@
     "about_me[-1] = sport\n",
     "\n",
     "print(about_me)  #WOOOOOOOOO\n",
+    "\n",
+    "#print only the numerical characteristics of Jessica\n",
+    "about_me[1:3]\n",
+    "\n",
     "\n"
    ]
   }
