--- a/notebooks/exploring.ipynb
+++ b/notebooks/exploring.ipynb
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -100,16 +100,18 @@
      "text": [
       "['Jessica', '153.5cm', '55kg', '20y/o', 'soccer']\n",
       "['Jessica', '153.5cm', '55kg', '20y/o', 'soccer']\n",
+      "['Jessica', '153.5cm', '55kg', '20y/o', 'BJJ']\n",
+      "['Jessica', '153.5cm', '55kg', '20y/o']\n",
       "['Jessica', '153.5cm', '55kg', '20y/o', 'BJJ']\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "['153.5cm', '55kg']"
+       "0"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,7 +132,15 @@
     "#print only the numerical characteristics of Jessica\n",
     "about_me[1:3]\n",
     "\n",
-    "\n"
+    "#alternative way to add BJJ to list using Python Methods\n",
+    "about_me.remove(\"BJJ\")\n",
+    "print(about_me)  #to check it is removed\n",
+    "\n",
+    "about_me.append(\"BJJ\")\n",
+    "print(about_me)\n",
+    "\n",
+    "#Check how many 5's are in my character profile\n",
+    "about_me.count(str(5))   #CONTINUE HERE\n"
    ]
   }
  ],
