Managed to count '5's in Jess' profil

--- a/notebooks/exploring.ipynb
+++ b/notebooks/exploring.ipynb
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -102,18 +102,9 @@
       "['Jessica', '153.5cm', '55kg', '20y/o', 'soccer']\n",
       "['Jessica', '153.5cm', '55kg', '20y/o', 'BJJ']\n",
       "['Jessica', '153.5cm', '55kg', '20y/o']\n",
-      "['Jessica', '153.5cm', '55kg', '20y/o', 'BJJ']\n"
+      "['Jessica', '153.5cm', '55kg', '20y/o', 'BJJ']\n",
+      "4\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -140,7 +131,21 @@
     "print(about_me)\n",
     "\n",
     "#Check how many 5's are in my character profile\n",
-    "about_me.count(str(5))   #CONTINUE HERE\n"
+    "about_me_str = ' '.join(about_me)  #First need to convert entire list into a string.\n",
+    "\n",
+    "count_5s = about_me_str.count('5')   #To count occurrences of '5' as a string.\n",
+    "\n",
+    "print(count_5s)\n",
+    "\n",
+    "#Performing functions on Python\n",
+    "\n",
+    "import math\n",
+    "import math\n",
+    "\n",
+    "import numpy\n",
+    "\n",
+    "#Created a new list\n",
+    "# CONTINUE FROM HERE\n"
    ]
   }
  ],
