Start create new data

--- a/notebooks/exploring.ipynb
+++ b/notebooks/exploring.ipynb
@@ -91,19 +91,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['Jessica', '153.5cm', '55kg', '20y/o', 'soccer']\n",
-      "['Jessica', '153.5cm', '55kg', '20y/o', 'soccer']\n",
-      "['Jessica', '153.5cm', '55kg', '20y/o', 'BJJ']\n",
-      "['Jessica', '153.5cm', '55kg', '20y/o']\n",
-      "['Jessica', '153.5cm', '55kg', '20y/o', 'BJJ']\n",
-      "4\n"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (2316586029.py, line 38)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[16], line 38\u001b[1;36m\u001b[0m\n\u001b[1;33m    even_numbers = range(1,101) if number %2 == 0  # CONTINUE HERE WIP\u001b[0m\n\u001b[1;37m                                                   ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -144,8 +140,10 @@
     "\n",
     "import numpy\n",
     "\n",
-    "#Created a new list\n",
-    "# CONTINUE FROM HERE\n"
+    "#Created two sets of new data containing numbers from 1 to 100 - Data 1 is EVEN. Data 2 is ODD\n",
+    "even_numbers = range(1,101) if number %2 == 0  # CONTINUE HERE WIP\n",
+    "\n",
+    "print(even_numbers)\n"
    ]
   }
  ],
