--- a/notebooks/exploring.ipynb
+++ b/notebooks/exploring.ipynb
@@ -91,15 +91,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (2316586029.py, line 38)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[16], line 38\u001b[1;36m\u001b[0m\n\u001b[1;33m    even_numbers = range(1,101) if number %2 == 0  # CONTINUE HERE WIP\u001b[0m\n\u001b[1;37m                                                   ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Jessica', '153.5cm', '55kg', '20y/o', 'soccer']\n",
+      "['Jessica', '153.5cm', '55kg', '20y/o', 'soccer']\n",
+      "['Jessica', '153.5cm', '55kg', '20y/o', 'BJJ']\n",
+      "['Jessica', '153.5cm', '55kg', '20y/o']\n",
+      "['Jessica', '153.5cm', '55kg', '20y/o', 'BJJ']\n",
+      "4\n",
+      "I have the biggest swag\n",
+      "I have the biggest swag\n",
+      "I have the biggest swag\n",
+      "I have the biggest swag\n",
+      "I have the biggest swag\n",
+      "I have the biggest swag\n",
+      "I have the biggest swag\n",
+      "I have the biggest swag\n",
+      "Jess needs to go straight home tonight\n",
+      "Mum does not need to ask no more\n",
+      "Dad does not need to ask no more\n",
+      "Jo is 18 so they can finally go to the bar!\n"
      ]
     }
    ],
@@ -133,17 +149,34 @@
     "\n",
     "print(count_5s)\n",
     "\n",
-    "#Performing functions on Python\n",
+    "#Performing print definitions on Python\n",
     "\n",
-    "import math\n",
-    "import math\n",
+    "def print_jess():\n",
+    "    jesssays = \"I have the biggest swag\"\n",
+    "    print(jesssays)\n",
+    "    print(jesssays)\n",
     "\n",
-    "import numpy\n",
+    "print_jess()  #note: need to call the function OUTSIDE itself (above) via indent\n",
+    "print_jess() #Every time the function print_jess() is called, it will print the number of times I defined it to print (i.e. twice)\n",
+    "print_jess()\n",
+    "print_jess()\n",
     "\n",
-    "#Created two sets of new data containing numbers from 1 to 100 - Data 1 is EVEN. Data 2 is ODD\n",
-    "even_numbers = range(1,101) if number %2 == 0  # CONTINUE HERE WIP\n",
     "\n",
-    "print(even_numbers)\n"
+    "#Conditions\n",
+    "def legal_drinking_age(name, age):\n",
+    "    if age < 18:\n",
+    "        return f\"{name} needs to go straight home tonight\"\n",
+    "    elif age ==18:\n",
+    "        return f\"{name} is {age} so they can finally go to the bar!\"\n",
+    "    else:\n",
+    "        return f\"{name} does not need to ask no more\"\n",
+    "\n",
+    "print(legal_drinking_age(\"Jess\", 16))\n",
+    "print(legal_drinking_age(\"Mum\", 56))\n",
+    "print(legal_drinking_age(\"Dad\", 55))\n",
+    "print(legal_drinking_age(\"Jo\", 18))     ##This ones not good because the it generates \"none\" in between each print result\n",
+    "\n",
+    "#Modified version of above\n"
    ]
   }
  ],
