Intro to histograms on Python

--- a/notebooks/exploring.ipynb
+++ b/notebooks/exploring.ipynb
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -116,6 +116,19 @@
       "Mum does not need to ask no more\n",
       "Dad does not need to ask no more\n",
       "Jo is 18 so they can finally go to the bar!\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "Mime type rendering requires nbformat>=4.2.0 but it is not installed",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\rjkar\\Documents\\Data Learning\\Learning\\notebooks\\exploring.ipynb Cell 6\u001b[0m line \u001b[0;36m6\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/rjkar/Documents/Data%20Learning/Learning/notebooks/exploring.ipynb#W5sZmlsZQ%3D%3D?line=62'>63</a>\u001b[0m layout \u001b[39m=\u001b[39m go\u001b[39m.\u001b[39mLayout(title \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39mAge Data\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/rjkar/Documents/Data%20Learning/Learning/notebooks/exploring.ipynb#W5sZmlsZQ%3D%3D?line=63'>64</a>\u001b[0m fig \u001b[39m=\u001b[39m go\u001b[39m.\u001b[39mFigure(data\u001b[39m=\u001b[39m[age_histogram], layout\u001b[39m=\u001b[39mlayout)\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/rjkar/Documents/Data%20Learning/Learning/notebooks/exploring.ipynb#W5sZmlsZQ%3D%3D?line=64'>65</a>\u001b[0m pyo\u001b[39m.\u001b[39;49miplot(fig)\n",
+      "File \u001b[1;32mc:\\Users\\rjkar\\AppData\\Local\\Programs\\Python\\Python38\\lib\\site-packages\\plotly\\offline\\offline.py:392\u001b[0m, in \u001b[0;36miplot\u001b[1;34m(figure_or_data, show_link, link_text, validate, image, filename, image_width, image_height, config, auto_play, animation_opts)\u001b[0m\n\u001b[0;32m    387\u001b[0m post_script \u001b[39m=\u001b[39m build_save_image_post_script(\n\u001b[0;32m    388\u001b[0m     image, filename, image_height, image_width, \u001b[39m\"\u001b[39m\u001b[39miplot\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    389\u001b[0m )\n\u001b[0;32m    391\u001b[0m \u001b[39m# Show figure\u001b[39;00m\n\u001b[1;32m--> 392\u001b[0m pio\u001b[39m.\u001b[39;49mshow(\n\u001b[0;32m    393\u001b[0m     figure,\n\u001b[0;32m    394\u001b[0m     validate\u001b[39m=\u001b[39;49mvalidate,\n\u001b[0;32m    395\u001b[0m     config\u001b[39m=\u001b[39;49mconfig,\n\u001b[0;32m    396\u001b[0m     auto_play\u001b[39m=\u001b[39;49mauto_play,\n\u001b[0;32m    397\u001b[0m     post_script\u001b[39m=\u001b[39;49mpost_script,\n\u001b[0;32m    398\u001b[0m     animation_opts\u001b[39m=\u001b[39;49manimation_opts,\n\u001b[0;32m    399\u001b[0m )\n",
+      "File \u001b[1;32mc:\\Users\\rjkar\\AppData\\Local\\Programs\\Python\\Python38\\lib\\site-packages\\plotly\\io\\_renderers.py:396\u001b[0m, in \u001b[0;36mshow\u001b[1;34m(fig, renderer, validate, **kwargs)\u001b[0m\n\u001b[0;32m    391\u001b[0m         \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[0;32m    392\u001b[0m             \u001b[39m\"\u001b[39m\u001b[39mMime type rendering requires ipython but it is not installed\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    393\u001b[0m         )\n\u001b[0;32m    395\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m nbformat \u001b[39mor\u001b[39;00m Version(nbformat\u001b[39m.\u001b[39m__version__) \u001b[39m<\u001b[39m Version(\u001b[39m\"\u001b[39m\u001b[39m4.2.0\u001b[39m\u001b[39m\"\u001b[39m):\n\u001b[1;32m--> 396\u001b[0m         \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[0;32m    397\u001b[0m             \u001b[39m\"\u001b[39m\u001b[39mMime type rendering requires nbformat>=4.2.0 but it is not installed\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    398\u001b[0m         )\n\u001b[0;32m    400\u001b[0m     ipython_display\u001b[39m.\u001b[39mdisplay(bundle, raw\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)\n\u001b[0;32m    402\u001b[0m \u001b[39m# external renderers\u001b[39;00m\n",
+      "\u001b[1;31mValueError\u001b[0m: Mime type rendering requires nbformat>=4.2.0 but it is not installed"
      ]
     }
    ],
@@ -159,10 +172,11 @@
     "print_jess()  #note: need to call the function OUTSIDE itself (above) via indent\n",
     "print_jess() #Every time the function print_jess() is called, it will print the number of times I defined it to print (i.e. twice)\n",
     "print_jess()\n",
-    "print_jess()\n",
+    "print_jess() \n",
+    "##The query above is not good because the it generates \"none\" in between each print result\n",
     "\n",
     "\n",
-    "#Conditions\n",
+    "#Modified version of above\n",
     "def legal_drinking_age(name, age):\n",
     "    if age < 18:\n",
     "        return f\"{name} needs to go straight home tonight\"\n",
@@ -174,10 +188,24 @@
     "print(legal_drinking_age(\"Jess\", 16))\n",
     "print(legal_drinking_age(\"Mum\", 56))\n",
     "print(legal_drinking_age(\"Dad\", 55))\n",
-    "print(legal_drinking_age(\"Jo\", 18))     ##This ones not good because the it generates \"none\" in between each print result\n",
+    "print(legal_drinking_age(\"Jo\", 18))     \n",
     "\n",
-    "#Modified version of above\n"
+    "#Plotting histograms\n",
+    "import plotly.graph_objs as go\n",
+    "import plotly.offline as pyo\n",
+    "age = [14, 15, 18, 23, 25, 35, 36, 42, 50, 55, 57]\n",
+    "age_histogram = go.Histogram(x=age)\n",
+    "layout = go.Layout(title = 'Age Data')\n",
+    "fig = go.Figure(data=[age_histogram], layout=layout)\n",
+    "pyo.iplot(fig)  #CONTINUE HERE OMFG"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
