Exploring with panda df using dog breed stats

--- a/notebooks/exploring.ipynb
+++ b/notebooks/exploring.ipynb
@@ -231,125 +231,147 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                                                       Indicator ValueType  \\\n",
-      "IndicatorCode                                                                \n",
-      "SH_STA_FGMS    Proportion of girls and women aged 15-49 years...   numeric   \n",
-      "SH_STA_FGMS    Proportion of girls and women aged 15-49 years...   numeric   \n",
-      "SH_STA_FGMS    Proportion of girls and women aged 15-49 years...   numeric   \n",
-      "SH_STA_FGMS    Proportion of girls and women aged 15-49 years...   numeric   \n",
-      "SH_STA_FGMS    Proportion of girls and women aged 15-49 years...   numeric   \n",
-      "...                                                          ...       ...   \n",
-      "SH_STA_FGMS    Proportion of girls and women aged 15-49 years...   numeric   \n",
-      "SH_STA_FGMS    Proportion of girls and women aged 15-49 years...   numeric   \n",
-      "SH_STA_FGMS    Proportion of girls and women aged 15-49 years...   numeric   \n",
-      "SH_STA_FGMS    Proportion of girls and women aged 15-49 years...   numeric   \n",
-      "SH_STA_FGMS    Proportion of girls and women aged 15-49 years...   numeric   \n",
+      "                                Weight\n",
+      "Breed                                 \n",
+      "Akita                             40.0\n",
+      "Alaskan Malamute                  40.0\n",
+      "American Staffordshire Terrier    30.0\n",
+      "Australian Shepherd               20.0\n",
+      "Australian Kelpie                 20.0\n",
+      "...                                ...\n",
+      "Staffordshire Bull Terrier        14.0\n",
+      "Welshi Corgi                      11.0\n",
+      "West Highland White Terrier        8.0\n",
+      "Whippet                           12.0\n",
+      "Yorkshire Terrier                  2.5\n",
       "\n",
-      "              ParentLocationCode         ParentLocation Location type  \\\n",
-      "IndicatorCode                                                           \n",
-      "SH_STA_FGMS                  AFR                 Africa       Country   \n",
-      "SH_STA_FGMS                  AFR                 Africa       Country   \n",
-      "SH_STA_FGMS                  AFR                 Africa       Country   \n",
-      "SH_STA_FGMS                  AFR                 Africa       Country   \n",
-      "SH_STA_FGMS                  AFR                 Africa       Country   \n",
-      "...                          ...                    ...           ...   \n",
-      "SH_STA_FGMS                  EMR  Eastern Mediterranean       Country   \n",
-      "SH_STA_FGMS                  EMR  Eastern Mediterranean       Country   \n",
-      "SH_STA_FGMS                  AFR                 Africa       Country   \n",
-      "SH_STA_FGMS                  AFR                 Africa       Country   \n",
-      "SH_STA_FGMS                  AFR                 Africa       Country   \n",
-      "\n",
-      "              SpatialDimValueCode       Location Period type Period  \\\n",
-      "IndicatorCode                                                         \n",
-      "SH_STA_FGMS                   NGA        Nigeria        Year   2016   \n",
-      "SH_STA_FGMS                   NGA        Nigeria        Year   2016   \n",
-      "SH_STA_FGMS                   NGA        Nigeria        Year   2016   \n",
-      "SH_STA_FGMS                   CIV  Côte d’Ivoire        Year   2016   \n",
-      "SH_STA_FGMS                   CIV  Côte d’Ivoire        Year   2016   \n",
-      "...                           ...            ...         ...    ...   \n",
-      "SH_STA_FGMS                   SOM        Somalia        Year   2006   \n",
-      "SH_STA_FGMS                   SOM        Somalia        Year   2006   \n",
-      "SH_STA_FGMS                   CMR       Cameroon        Year   2004   \n",
-      "SH_STA_FGMS                   CMR       Cameroon        Year   2004   \n",
-      "SH_STA_FGMS                   CMR       Cameroon        Year   2004   \n",
-      "\n",
-      "               IsLatestYear  ... FactValueUoM FactValueNumericLowPrefix  \\\n",
-      "IndicatorCode                ...                                          \n",
-      "SH_STA_FGMS            True  ...          NaN                       NaN   \n",
-      "SH_STA_FGMS            True  ...          NaN                       NaN   \n",
-      "SH_STA_FGMS            True  ...          NaN                       NaN   \n",
-      "SH_STA_FGMS            True  ...          NaN                       NaN   \n",
-      "SH_STA_FGMS            True  ...          NaN                       NaN   \n",
-      "...                     ...  ...          ...                       ...   \n",
-      "SH_STA_FGMS            True  ...          NaN                       NaN   \n",
-      "SH_STA_FGMS            True  ...          NaN                       NaN   \n",
-      "SH_STA_FGMS            True  ...          NaN                       NaN   \n",
-      "SH_STA_FGMS            True  ...          NaN                       NaN   \n",
-      "SH_STA_FGMS            True  ...          NaN                       NaN   \n",
-      "\n",
-      "              FactValueNumericLow  FactValueNumericHighPrefix  \\\n",
-      "IndicatorCode                                                   \n",
-      "SH_STA_FGMS                   NaN                         NaN   \n",
-      "SH_STA_FGMS                   NaN                         NaN   \n",
-      "SH_STA_FGMS                   NaN                         NaN   \n",
-      "SH_STA_FGMS                   NaN                         NaN   \n",
-      "SH_STA_FGMS                   NaN                         NaN   \n",
-      "...                           ...                         ...   \n",
-      "SH_STA_FGMS                   NaN                         NaN   \n",
-      "SH_STA_FGMS                   NaN                         NaN   \n",
-      "SH_STA_FGMS                   NaN                         NaN   \n",
-      "SH_STA_FGMS                   NaN                         NaN   \n",
-      "SH_STA_FGMS                   NaN                         NaN   \n",
-      "\n",
-      "               FactValueNumericHigh  Value  FactValueTranslationID  \\\n",
-      "IndicatorCode                                                        \n",
-      "SH_STA_FGMS                     NaN   15.6                     NaN   \n",
-      "SH_STA_FGMS                     NaN   18.4                     NaN   \n",
-      "SH_STA_FGMS                     NaN   23.4                     NaN   \n",
-      "SH_STA_FGMS                     NaN   30.8                     NaN   \n",
-      "SH_STA_FGMS                     NaN   36.7                     NaN   \n",
-      "...                             ...    ...                     ...   \n",
-      "SH_STA_FGMS                     NaN   97.9                     NaN   \n",
-      "SH_STA_FGMS                     NaN   98.4                     NaN   \n",
-      "SH_STA_FGMS                     NaN    0.9                     NaN   \n",
-      "SH_STA_FGMS                     NaN    1.4                     NaN   \n",
-      "SH_STA_FGMS                     NaN    2.1                     NaN   \n",
-      "\n",
-      "               FactComments  Language              DateModified  \n",
-      "IndicatorCode                                                    \n",
-      "SH_STA_FGMS            MICS        EN  2018-05-22T16:00:00.000Z  \n",
-      "SH_STA_FGMS            MICS        EN  2018-05-22T16:00:00.000Z  \n",
-      "SH_STA_FGMS            MICS        EN  2018-05-22T16:00:00.000Z  \n",
-      "SH_STA_FGMS            MICS        EN  2018-05-22T16:00:00.000Z  \n",
-      "SH_STA_FGMS            MICS        EN  2018-05-22T16:00:00.000Z  \n",
-      "...                     ...       ...                       ...  \n",
-      "SH_STA_FGMS            MICS        EN  2018-05-22T16:00:00.000Z  \n",
-      "SH_STA_FGMS            MICS        EN  2018-05-22T16:00:00.000Z  \n",
-      "SH_STA_FGMS             DHS        EN  2018-05-22T16:00:00.000Z  \n",
-      "SH_STA_FGMS             DHS        EN  2018-05-22T16:00:00.000Z  \n",
-      "SH_STA_FGMS             DHS        EN  2018-05-22T16:00:00.000Z  \n",
-      "\n",
-      "[87 rows x 33 columns]\n"
+      "[73 rows x 1 columns]\n"
      ]
     }
    ],
    "source": [
     "# Dictionaries + pandas + DataFrames from csv\n",
     "\n",
-    "import pandas as pd\n",
+    "\n",
+    "import numpy as np\n",
     "\n",
     "\n",
     "#import csv data as DataFrame - did this by dragging and dropping the csv file to Explorer on left, copied relative path into code below.\n",
-    "stats = pd.read_csv('Proportion of girls and women aged 15-49 who have undergone genital mutilation.csv', index_col = 0)\n",
-    "print(stats)  #CONTINNUE HERE - create own CSV\n",
+    "dog_breeds = pd.read_csv('dogbreeds_weight.csv', index_col = 0) #index_col is to remove the fist automatic column\n",
+    "print(dog_breeds)  \n",
+    "\n",
+    "dog_breeds[0:4]  #Testing with slicers\n",
+    "\n",
+    "np_dogbreeds = np.array(dog_breeds)  #convert csv data into NumPy arrays\n",
+    "#np_dogbreeds[0,1]  #CANNOT use slicer functions as it only applies to Lists\n",
+    "#np_dogbreeds[:]   #as above\n",
+    "#print(np_dogbreeds[50])  #again, same as above - appears np is more suitable to Lists\n",
+    "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                Weight\n",
+      "Breed                                 \n",
+      "Akita                             40.0\n",
+      "Alaskan Malamute                  40.0\n",
+      "American Staffordshire Terrier    30.0\n",
+      "Australian Shepherd               20.0\n",
+      "Australian Kelpie                 20.0\n",
+      "...                                ...\n",
+      "Staffordshire Bull Terrier        14.0\n",
+      "Welshi Corgi                      11.0\n",
+      "West Highland White Terrier        8.0\n",
+      "Whippet                           12.0\n",
+      "Yorkshire Terrier                  2.5\n",
+      "\n",
+      "[73 rows x 1 columns]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Weight</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Breed</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Miniature Schnauzer</th>\n",
+       "      <td>7.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Standard Schnauzer</th>\n",
+       "      <td>16.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Giant Schnauzer</th>\n",
+       "      <td>43.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     Weight\n",
+       "Breed                      \n",
+       "Miniature Schnauzer     7.0\n",
+       "Standard Schnauzer     16.0\n",
+       "Giant Schnauzer        43.0"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "#We have already imported dog_breeds csv above using the read.csv() function : dog_breeds = pd.read_csv('dogbreeds_weight.csv', index_col = 0)\n",
+    "dogs = pd.DataFrame(dog_breeds)\n",
+    "print(dogs)\n",
+    "\n",
+    "#selecting data from the dog_breeds \n",
+    "dogs.loc[\"Chihuahua\"]  #this is from pandas\n",
+    "dogs.loc[[\"Miniature Schnauzer\", \"Standard Schnauzer\", \"Giant Schnauzer\"]] #double brackets to get in df - so much neater!\n",
+    "\n",
+    "##CONTINUE HERE - how to add new column data (i.e. small, medium, large)"
    ]
   }
  ],
