Operators applied on dog breeds data

--- a/notebooks/exploring.ipynb
+++ b/notebooks/exploring.ipynb
@@ -279,13 +279,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Breed\n",
+      "Akita                              True\n",
+      "Alaskan Malamute                   True\n",
+      "American Staffordshire Terrier     True\n",
+      "Australian Shepherd                True\n",
+      "Australian Kelpie                  True\n",
+      "                                  ...  \n",
+      "Staffordshire Bull Terrier        False\n",
+      "Welshi Corgi                      False\n",
+      "West Highland White Terrier       False\n",
+      "Whippet                           False\n",
+      "Yorkshire Terrier                 False\n",
+      "Name: Weight, Length: 73, dtype: bool\n",
       "                                Weight\n",
       "Breed                                 \n",
       "Akita                             40.0\n",
@@ -293,85 +306,89 @@
       "American Staffordshire Terrier    30.0\n",
       "Australian Shepherd               20.0\n",
       "Australian Kelpie                 20.0\n",
-      "...                                ...\n",
-      "Staffordshire Bull Terrier        14.0\n",
-      "Welshi Corgi                      11.0\n",
-      "West Highland White Terrier        8.0\n",
-      "Whippet                           12.0\n",
-      "Yorkshire Terrier                  2.5\n",
-      "\n",
-      "[73 rows x 1 columns]\n"
+      "Australian Cattle Dog             22.0\n",
+      "Basset Hound                      22.0\n",
+      "Bernese Mountain Dog              40.0\n",
+      "Bloodhound                        58.0\n",
+      "Border Collie                     20.0\n",
+      "Boxer                             30.0\n",
+      "British Bulldog                   21.0\n",
+      "Bull Terrier                      25.0\n",
+      "Bullmastiff                       50.0\n",
+      "Chow Chow                         25.0\n",
+      "Collie                            25.0\n",
+      "Dalmatian                         27.0\n",
+      "Dobermann                         35.0\n",
+      "Foxhound                          32.0\n",
+      "German Shepherd                   36.0\n",
+      "Golden Retriever                  32.0\n",
+      "Greyhound                         29.0\n",
+      "Irish Setter                      30.0\n",
+      "Labrador Retriever                35.0\n",
+      "Mastiff                           80.0\n",
+      "Old English Sheepdog              32.0\n",
+      "Standard Poodle                   25.0\n",
+      "Rottweiler                        45.0\n",
+      "Samoyed                           25.0\n",
+      "Giant Schnauzer                   43.0\n",
+      "Siberian Husky                    21.0\n",
+      "St Bernard                        70.0\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Weight</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Breed</th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>Miniature Schnauzer</th>\n",
-       "      <td>7.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Standard Schnauzer</th>\n",
-       "      <td>16.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Giant Schnauzer</th>\n",
-       "      <td>43.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                     Weight\n",
-       "Breed                      \n",
-       "Miniature Schnauzer     7.0\n",
-       "Standard Schnauzer     16.0\n",
-       "Giant Schnauzer        43.0"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "import pandas as pd\n",
     "#We have already imported dog_breeds csv above using the read.csv() function : dog_breeds = pd.read_csv('dogbreeds_weight.csv', index_col = 0)\n",
     "dogs = pd.DataFrame(dog_breeds)\n",
-    "print(dogs)\n",
     "\n",
     "#selecting data from the dog_breeds \n",
     "dogs.loc[\"Chihuahua\"]  #this is from pandas\n",
     "dogs.loc[[\"Miniature Schnauzer\", \"Standard Schnauzer\", \"Giant Schnauzer\"]] #double brackets to get in df - so much neater!\n",
     "\n",
-    "##CONTINUE HERE - how to add new column data (i.e. small, medium, large)"
+    "small_size = dogs[\"Weight\"] < 10\n",
+    "medium_size = np.logical_and(dogs[\"Weight\"] >= 10, dogs[\"Weight\"] < 20)\n",
+    "large_size = dogs[\"Weight\"] >= 20\n",
+    "\n",
+    "print(large_size)\n",
+    "print(dogs[large_size]) #square brackets used to use df which populates actual values rather than T or F (which above query populates) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'Breed'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "File \u001b[1;32mc:\\Users\\rjkar\\AppData\\Local\\Programs\\Python\\Python38\\lib\\site-packages\\pandas\\core\\indexes\\base.py:3653\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   3652\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m-> 3653\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_engine\u001b[39m.\u001b[39;49mget_loc(casted_key)\n\u001b[0;32m   3654\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mKeyError\u001b[39;00m \u001b[39mas\u001b[39;00m err:\n",
+      "File \u001b[1;32mc:\\Users\\rjkar\\AppData\\Local\\Programs\\Python\\Python38\\lib\\site-packages\\pandas\\_libs\\index.pyx:147\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32mc:\\Users\\rjkar\\AppData\\Local\\Programs\\Python\\Python38\\lib\\site-packages\\pandas\\_libs\\index.pyx:176\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32mpandas\\_libs\\hashtable_class_helper.pxi:7080\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32mpandas\\_libs\\hashtable_class_helper.pxi:7088\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;31mKeyError\u001b[0m: 'Breed'",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\rjkar\\Documents\\Data Learning\\Learning\\notebooks\\exploring.ipynb Cell 10\u001b[0m line \u001b[0;36m4\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/rjkar/Documents/Data%20Learning/Learning/notebooks/exploring.ipynb#X14sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m#Using matplotlib on dogs breeds data\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/rjkar/Documents/Data%20Learning/Learning/notebooks/exploring.ipynb#X14sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39m#Pandas and the csv file \"dog_breeds\" has been imported from last code sections.\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/rjkar/Documents/Data%20Learning/Learning/notebooks/exploring.ipynb#X14sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mmatplotlib\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mpyplot\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mplt\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/rjkar/Documents/Data%20Learning/Learning/notebooks/exploring.ipynb#X14sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m plt\u001b[39m.\u001b[39mplot(dog_breeds[\u001b[39m\"\u001b[39m\u001b[39mWeight\u001b[39m\u001b[39m\"\u001b[39m], dog_breeds[\u001b[39m\"\u001b[39;49m\u001b[39mBreed\u001b[39;49m\u001b[39m\"\u001b[39;49m])\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/rjkar/Documents/Data%20Learning/Learning/notebooks/exploring.ipynb#X14sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m plt\u001b[39m.\u001b[39mxlabel(\u001b[39m\"\u001b[39m\u001b[39mWeight (kg)\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/rjkar/Documents/Data%20Learning/Learning/notebooks/exploring.ipynb#X14sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m plt\u001b[39m.\u001b[39mylabel(\u001b[39m\"\u001b[39m\u001b[39mDog Type\u001b[39m\u001b[39m\"\u001b[39m)\n",
+      "File \u001b[1;32mc:\\Users\\rjkar\\AppData\\Local\\Programs\\Python\\Python38\\lib\\site-packages\\pandas\\core\\frame.py:3761\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   3759\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcolumns\u001b[39m.\u001b[39mnlevels \u001b[39m>\u001b[39m \u001b[39m1\u001b[39m:\n\u001b[0;32m   3760\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_getitem_multilevel(key)\n\u001b[1;32m-> 3761\u001b[0m indexer \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mcolumns\u001b[39m.\u001b[39;49mget_loc(key)\n\u001b[0;32m   3762\u001b[0m \u001b[39mif\u001b[39;00m is_integer(indexer):\n\u001b[0;32m   3763\u001b[0m     indexer \u001b[39m=\u001b[39m [indexer]\n",
+      "File \u001b[1;32mc:\\Users\\rjkar\\AppData\\Local\\Programs\\Python\\Python38\\lib\\site-packages\\pandas\\core\\indexes\\base.py:3655\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   3653\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_engine\u001b[39m.\u001b[39mget_loc(casted_key)\n\u001b[0;32m   3654\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mKeyError\u001b[39;00m \u001b[39mas\u001b[39;00m err:\n\u001b[1;32m-> 3655\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mKeyError\u001b[39;00m(key) \u001b[39mfrom\u001b[39;00m \u001b[39merr\u001b[39;00m\n\u001b[0;32m   3656\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mTypeError\u001b[39;00m:\n\u001b[0;32m   3657\u001b[0m     \u001b[39m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[0;32m   3658\u001b[0m     \u001b[39m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[0;32m   3659\u001b[0m     \u001b[39m#  the TypeError.\u001b[39;00m\n\u001b[0;32m   3660\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_check_indexing_error(key)\n",
+      "\u001b[1;31mKeyError\u001b[0m: 'Breed'"
+     ]
+    }
+   ],
+   "source": [
+    "#Using matplotlib on dogs breeds data\n",
+    "#Pandas and the csv file \"dog_breeds\" has been imported from last code sections.\n",
+    "import matplotlib.pyplot as plt\n",
+    "plt.plot(dog_breeds[\"Weight\"], dog_breeds[\"Breed\"])\n",
+    "plt.xlabel(\"Weight (kg)\")\n",
+    "plt.ylabel(\"Dog Type\")\n",
+    "plt.title(\"Dog Breeds by Weight\")\n",
+    "plt.show()   ### continue troubleshooting from here"
    ]
   }
  ],
